# image_generation

./: AGENTS.md  cache.py  evaluate_fid.py  inference.py  pyproject.toml  train.py
config/: __init__.py
configs/: cache.yaml  cache_flowers.yaml  cache_imagenet256.yaml  inference.yaml  train.yaml  train_flowers.yaml  train_flowers_ddt_multiple_final.yaml  train_imagenet256.yaml
data/: __init__.py  aspect_ratios.py  bucketing.py  loader.py  text_lookup.py
data/cache_sources/: __init__.py  common.py  densefusion.py  flowers.py  hf_parquet.py  image_folder.py  webdataset.py
data/flowers/: __init__.py  flowers.py
inference/: engine.py
models/: model.py  text.py  vae.py
models/image_model/: c2i_model.py  ddt.py  image_model.py
tests/: conftest.py  test_bucketing_sampler.py
tests/data/: test_text_lookup.py
tests/data/cache_sources/: test_hf_parquet.py  test_image_folder.py  test_webdataset.py
training/: checkpoint.py  engine.py  loop_context.py  losses.py  rectified_flow.py  sample_step.py  train_step.py
