[project]
name = "ddt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.9.0",
    "datasets>=4.0.0",
    "diffusers>=0.34.0",
    "duckdb>=1.3.2",
    "einops>=0.8.1",
    "gradio>=5.46.0",
    "hf-transfer>=0.1.9",
    "huggingface-hub>=0.34.5",
    "pytest>=8.4.2",
    "tensorboard>=2.20.0",
    "torch>=2.7.1",
    "torch-fidelity>=0.3.0",
    "torchvision>=0.22.1",
    "transformers>=4.54.1",
    "webdataset>=1.0.2",
    "torch-fidelity>=0.3.0",
]
